--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 HF_TOKEN=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
 GEMINI_KEY=AIzaSyCWEaGGNQKW_8Rv9Nl2k9sbOQgkTWvOOVo
+OPENAI_API_KEY=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
