Enhance application structure by introducing QueueManager for job handling, refactoring generate endpoint to support async processing, and updating .env with new configuration variables. Improved error handling and cleanup logic for temporary files.

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 HF_TOKEN=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
 GEMINI_KEY=AIzaSyCWEaGGNQKW_8Rv9Nl2k9sbOQgkTWvOOVo
 OPENAI_API_KEY=sk
+REPLICATE_API_TOKEN=rt
+MAX_LOCAL_CONCURRENCY=1
